--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 body {
-  background-color: #EEEEEE;
+  background-color: #a598ff;
 }
 
 #title {
   align-items: center;
   border-radius: 10px;
-  box-shadow: -4px -4px 4px 0 white, 4px 4px 4px 0 rgba(0, 0, 0, 0.03);
   padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
@@ -20,16 +19,14 @@ body {
   height: 500px;
   border-style: solid;
   border-width: 7px;
-  border-color: black;
-  background-color: black;
+  border-color: #edeff8;
+  background-color: #edeff8;
   margin-top: 20px;
   margin-top: 10px;
   border-radius: 10px;
-  box-shadow: -4px -4px 4px 0 rgba(0, 0, 0, 0.03), 4px 4px 4px 0 white;
 }
 
 #container {
-  height: 1000px;
   width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -38,64 +35,65 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 10px;
-  box-shadow: -4px -4px 4px 0 white, 4px 4px 4px 0 rgba(0, 0, 0, 0.03);
+  border-radius: 20px;
+  background-color: #edeff8;
+  height: 900px;
 }
 
 .pannel {
-  background-color: #EEEEEE;
-  font-family: Nunito;
+  background-color: #edeff8;
+  font-family: "Poppins";
   font-weight: 600;
   text-align: center;
-  font-size: 80px;
-  border-style: solid;
-  border-width: 5px;
-  border-color: black;
+  font-size: 75px;
+  width: 115px;
+  height: 115px;
   border-radius: 10px;
+  box-shadow: 5px 5px 10px #cacaca, -5px -5px 10px #ffffff;
 }
 
 h1 {
-  font-family: Nunito;
-  font-size: 100px;
+  font-family: "Poppins";
+  font-size: 50px;
   margin-bottom: 10px;
   margin-top: 10px;
   text-align: center;
+  color: #8490a4;
 }
 
 p {
   margin: 0;
   padding: 0;
   margin-top: 14px;
-  font-family: Nunito;
+  font-family: "Poppins";
   text-align: center;
+  color: #8490a4;
 }
 
 button {
-  font-family: Nunito;
+  font-family: "Poppins";
+  color: #8490a4;
   border-style: none;
   border-radius: 10px;
-  box-shadow: -4px -4px 4px 0 white, 4px 4px 4px 0 rgba(0, 0, 0, 0.03);
+  box-shadow: 10px 10px 20px #cacaca, -10px -10px 20px #ffffff;
 }
 
 #startbtn {
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
-  height: 75px;
-  width: 200px;
-  font-family: Nunito;
-  font-size: 50px;
+  height: 50px;
+  width: 100px;
+  font-family: "Poppins";
+  font-size: 30px;
 }
 
 #arrow {
-  margin-top: 10px;
-  border-radius: 10px;
-  box-shadow: -4px -4px 4px 0 white, 4px 4px 4px 0 rgba(0, 0, 0, 0.03);
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 20px;
+  width: 300px;
 }
 
 .arrows {
@@ -106,8 +104,6 @@ button {
 
 .noColor {
   background-color: #EEEEEE;
-  border-radius: 20px;
-  border-width: 15px;
 }
 
 .color1 {
