--- a/public/styles.css
+++ b/public/styles.css
@@ -30,7 +30,7 @@ body {
   width: 600px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: auto;
+  margin-top: 50px;
   margin-bottom: auto;
   display: flex;
   flex-direction: column;
@@ -165,4 +165,34 @@ button {
   background-color: #6600cc;
   color: white;
   font-size: 40px;
+}
+
+@media screen and (max-width: 700px) {
+  #grid {
+    width: 340px;
+    height: 340px;
+  }
+
+  #container {
+    width: 100%;
+    height: 100%;
+    min-height: 790px;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    background-color: #edeff8;
+  }
+
+  .pannel {
+    font-family: "Poppins";
+    font-weight: 600;
+    text-align: center;
+    font-size: 50px;
+    width: 75px;
+    height: 75px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #cacaca, -5px -5px 10px #ffffff;
+  }
 }
